# fuzzy

./: .editorconfig  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  biome.json  package-lock.json  package.json  rustfmt.toml  tsconfig.base.json  tsconfig.tests.json
.github/: COMMIT_MESSAGE_TEMPLATE.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_change.md  feature_request.md  performance_improvement.md  refactoring.md  test_update.md
.github/workflows/: deploy-pages.yml  pr-issue-link-check.yml  pr-sync-issue-labels.yml
apps/desktop/: README.md  package.json  vite.config.js
apps/desktop/scripts/: prepare-extension.ts  validate-extension-store.ts
apps/desktop/src/: app.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.store.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/routes/: +layout.ts  +page.svelte
apps/extension/: README.md  package.json  wxt.config.ts
apps/native-host/: Cargo.toml  README.md
apps/native-host/src/: api_types.rs  commands.rs  db.rs  main.rs  protocol.rs
apps/site/: README.md  index.html  package.json  styles.css  vite.config.ts
crates/engine-core/: Cargo.toml  README.md
crates/engine-core/fixtures/: schema.sql  seed.sql
crates/engine-core/fixtures/migrations/: 0001_duplicate_members_similarity.sql  0001_extension_runtime_observations.sql  0002_course_folder_names.sql
crates/engine-core/src/: database.rs  duplicate.rs  error.rs  extension_runtime.rs  folder_name_notes.rs  folder_names.rs  index.rs  lib.rs  pattern.rs  rule.rs  scan.rs  section.rs  types.rs  windows_names.rs
crates/engine-core/src/database/: duplicates.rs  learning.rs  notifications.rs  rules.rs
crates/engine-core/src/duplicate/: fingerprint.rs  lsh.rs
crates/engine-core/src/rule/: template.rs
crates/engine-core/tests/: pattern_estimators.rs  section_names.rs
docs/: セクション名規則.md  セットアップ.md  データベース設計.md  仕様書.md  保存パターン推定方式.md  重複検出方式.md  開発判断.md
docs/api/: contract.md
docs/mockups/: save-suggestion.html  search.html
docs/reports/: issue38.md  issue39.md  issue40.md  issue42.md
docs/roadmap/: hirase.md  matoba.md  okaji.md  subaru.md
tests/desktop/: course-overrides.test.ts  extension-bundle.test.ts  extension-install.test.ts
tests/extension/: calendar-panel.test.ts  deadline-ics.test.ts  deadline-notifications.test.ts  extension-assets.test.ts  extension-runtime.test.ts  file-type.test.ts  login-automation.test.ts  moodle-page-classification.test.ts  notification-rule.test.ts  page-snapshot.test.ts  rule-integrity.test.ts  rule-management.test.ts  save-panel-handle.test.ts  save-panel-state.test.ts  save-plan.test.ts  screen-copy.test.ts  snapshot-collector.test.ts  theme-contrast.test.ts
tests/shared/: sample-data-consistency.test.ts
tests/site/: pages-site.test.ts
(+50 files in other folders)
