# Rustワークスペース定義。
# apps/desktop/src-tauri は雛形生成後（issue #35）に members へ追加する。
[workspace]
resolver = "2"
members = ["crates/engine-core", "apps/native-host"]

[workspace.package]
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
