[package]
name = "native-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Fuzzy Native Messagingホスト：拡張機能と標準入出力でenvelopeをやり取りする常駐エンジン"

[dependencies]
engine-core = { path = "../../crates/engine-core" }
serde.workspace = true
serde_json.workspace = true
