[package]
name = "engine-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Fuzzy 共有エンジン：再帰走査・ルール照合・全文索引・重複検出（docs/仕様書.md 3.3節）"

[dependencies]
serde.workspace = true
# SQLite接続はTauriとnative-hostで共有する。bundledで外部DLL依存を避ける。
rusqlite = { version = "0.31", features = ["bundled"] }
# ファイル内容の完全一致判定。ハッシュ文字列は `b3:<hex>` 形式でSQLiteへ保存する。
blake3 = "1"
unicode-normalization = "0.1"
unicode-segmentation = "1.12"
